--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,4 @@
+/* universal selectors */
 * {
     box-sizing: border-box;
     padding: 0;
@@ -24,7 +25,8 @@ header h1 .seo {
     color: #d9dcd6;
 }
 
-header div {
+/* start of nav bar */
+nav {
     padding-top: 15px;
     margin-right: 20px;
     float: right;
@@ -32,11 +34,11 @@ header div {
     font-size: 20px;
 }
 
-header div ul {
+nav ul {
     list-style-type: none;
 }
 
-header div ul li {
+nav ul li {
     display: inline-block;
     margin-left: 25px;
 }
@@ -68,7 +70,7 @@ p {
     float: right;
     margin-left: 25px;
 }
-
+/* start of three articles */
 .content {
     width: 75%;
     display: inline-block;
